Fix issue with fd-table rows overlapping the table header

--- a/resources/styles/widgets.css
+++ b/resources/styles/widgets.css
@@ -35,6 +35,7 @@ body {
   box-shadow: inset 0 1px 0 var(--sapList_BorderColor), inset 0 -1px 0 var(--sapList_BorderColor);
   border-bottom: hidden;
   border-top: hidden;
+  z-index: 1;
 }
 
 .dg-table--no-outer-horizontal-borders .dg-table__header-sticky th.fd-table__cell,
